--- a/src/app/courses/courses/courses.component.html
+++ b/src/app/courses/courses/courses.component.html
@@ -1,4 +1,6 @@
-<table mat-table [dataSource]="courses" class="mat-elevation-z8">
+<mat-card>
+  <mat-toolbar color="primary">My Application</mat-toolbar>
+  <table mat-table [dataSource]="courses" class="mat-elevation-z8">
 
     <!--- Note that these columns can be defined in any order.
           The actual rendered columns are set as a property on the row definition" -->
@@ -18,3 +20,4 @@
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
   </table>
+</mat-card>
